FRO-4-fix-2|Bug-fix: Fix slight overflow
-change expand cursor to pointer

--- a/src/pages/scenery/scenery.module.css
+++ b/src/pages/scenery/scenery.module.css
@@ -98,6 +98,7 @@
   font-size: 20px;
   line-height: 25px;
   color: #1c4cb6;
+  cursor: pointer;
 }
 
 @media only screen and (min-width: 601px) {
